# Autorun-rs

./: .gitignore  Cargo.toml  README.md  build_win_32.bat  build_win_64.bat  fields.lua
.github/workflows/: ci.yml  downloads.yml
autorun/: Cargo.toml  build.rs
autorun-gui/: Cargo.toml
autorun-gui/src/: main.rs
autorun-shared/: Cargo.toml
autorun-shared/src/: config.rs  lib.rs  serde.rs  top.rs
autorun/src/: cross.rs  global.rs  lib.rs  util.rs  version.rs
autorun/src/configs/: mod.rs  settings.toml
autorun/src/fs/: mod.rs  path.rs
autorun/src/hooks/: dumper.rs  lazy.rs  mod.rs  scripthook.rs
autorun/src/logging/: fallback.rs  mod.rs
autorun/src/lua/: env.rs  err.rs  mod.rs
autorun/src/lua/fs/: mod.rs
autorun/src/plugins/: mod.rs  serde.rs
autorun/src/ui/: console.rs  gui.rs  gui_old.rs  mod.rs
autorun/src/ui/console/: commands.rs  mod.rs  palette.rs  tray.rs
examples/: autorun.lua  fields.lua  hook.lua
src/: hooks.rs  input.rs  lib.rs  logging.rs
src/detours/: lazy.rs  mod.rs
src/sys/: funcs.rs  mod.rs  runlua.rs  statics.rs  util.rs
