[package]
name = "autorun"
version = "0.6.0"
authors = ["Vurv78 <Vurv78@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rglua = { git = "https://github.com/Vurv78/rglua" }

detour = { version = "0.8.1", default-features = false }

# Global Mutable Variables
once_cell = "1.8.0"
atomic = "0.5.0"

# Misc
home = "0.5.3"
anyhow = "1.0.44"
thiserror = "1.0.30"

# Logging
chrono = { version = "0.4.19", optional = true }
log = { version = "0.4.14", optional = true }
simplelog = { version = "0.11.0", optional = true }

regex = "1.5.4"

[features]
default = ["runner"]
runner = []

# Disabled by default for now as this breaks autorun.
logging = ["chrono", "log", "simplelog"]