[package]
name = "autorun-gui"
version = "0.1.0"
authors = ["Vurv78 <Vurv78@users.noreply.github.com>"]
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "0.1.7", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }

atomic = "0.5.1"
message-io = "0.14.3"

log = "0.4.14"
simplelog = "0.11.2"

bincode = { version = "2.0.0-beta.0", features = ["derive"] }
autorun-shared = { path = "../autorun-shared", features = ["gui"] }

thiserror = "1.0.30"