[package]
name = "autorun"
version = "1.2.1"
authors = ["Vurv78 <Vurv78@users.noreply.github.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["runner", "inject"]
runner = []
# Allow Autorun to also be injected through a DllMain export.
inject = []

[dependencies]
autorun-shared = { path = "../autorun-shared" }
rglua = { version = "3.0.0-beta2" }

lua-patterns = "0.4"
detour = { version = "0.8", default-features = false }

# Error handling
thiserror = "1.0"
fs-err = "2.7"

# Settings
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# Global Mutable Variables
once_cell = "1.10"

# Misc
home = "0.5"
winapi = { version = "0.3" }
libloading = "0.7" # For Autorun.requirebin

# Console
trayicon = "0.1.3"
time = "0.3"
colored = "2"
