[package]
name = "autorun"
version = "1.2.3"
authors = ["Vurv78 <Vurv78@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/Vurv78/Autorun-rs"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["executor", "inject", "plugins", "colors", "http"]

executor = [] # Executor inside console
inject = [] # Allow injection through DllMain export
plugins = []
colors = [] # Colors in external console
http = ["tinyget"] # To check for updates and download plugins in the future.

[dependencies]
autorun-shared = { path = "../autorun-shared" }
rglua = { path = "../../rglua/rglua" }

lupat = { git = "https://github.com/Vurv78/lupat" }
detour = { version = "0.8", default-features = false }

# Error handling
thiserror = "1.0"
fs-err = "2.7"

# Settings
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# Global Mutable Variables
once_cell = "1.10"

# Misc
home = "0.5"
winapi = { version = "0.3" }
libloading = "0.7" # For Autorun.requirebin

# Console
trayicon = "0.1.3"
time = "0.3"
colored = "2"

tinyget = { version = "1.0", features = ["https"], optional = true }

[build-dependencies]
cfg_aliases = "0.1"